--- a/charts/kubeadm/templates/JoinConfiguration.yaml
+++ b/charts/kubeadm/templates/JoinConfiguration.yaml
@@ -5,12 +5,13 @@ discovery:
     kubeConfigPath: /root/.kube/config
 controlPlane:
   localAPIEndpoint:
-    advertiseAddress: IP_ADDRESS
-    bindPort: {{ regexSplit ":" .Values.apiEndpoint -1 | last }}
+    advertiseAddress: {{ .Values.serviceIp }}
+    bindPort: {{ .Values.api.listenPort }}
 nodeRegistration:
   ignorePreflightErrors:
   - DirAvailable--var-lib-etcd
   - FileAvailable--etc-kubernetes-pki-ca.crt
   - Swap
+  - KubeletVersion
   kubeletExtraArgs:
     node-labels: {{ .Values.nodeLabels | quote }}
