feat: kube-prometheus-stack version upgrade incl. latest state metrics and dashboards for the metrics systems themselves, fix for gathering all prometheus rules across all namespaces

--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -104,6 +104,7 @@ kube-prometheus-stack:
       # gather all monitors 
       podMonitorSelectorNilUsesHelmValues: false
       serviceMonitorSelectorNilUsesHelmValues: false
+      ruleSelectorNilUsesHelmValues: false
 
       resources:
         requests:
