--- a/charts/kubezero-metrics/charts/kube-prometheus-stack/templates/prometheus/ingressperreplica.yaml
+++ b/charts/kubezero-metrics/charts/kube-prometheus-stack/templates/prometheus/ingressperreplica.yaml
@@ -4,6 +4,7 @@
 {{- $servicePort := .Values.prometheus.servicePerReplica.port -}}
 {{- $ingressValues := .Values.prometheus.ingressPerReplica -}}
 {{- $apiIsStable := eq (include "kube-prometheus-stack.ingress.isStable" .) "true" -}}
+{{- $ingressSupportsPathType := eq (include "kube-prometheus-stack.ingress.supportsPathType" .) "true" -}}
 apiVersion: v1
 kind: List
 metadata:
@@ -12,7 +13,7 @@ metadata:
 items:
 {{ range $i, $e := until $count }}
   - kind: Ingress
-    apiVersion: {{ include "kube-prometheus-stack.ingress.apiVersion" . }}
+    apiVersion: {{ include "kube-prometheus-stack.ingress.apiVersion" $ }}
     metadata:
       name: {{ include "kube-prometheus-stack.fullname" $ }}-prometheus-{{ $i }}
       namespace: {{ template "kube-prometheus-stack.namespace" $ }}
@@ -38,7 +39,7 @@ items:
             paths:
       {{- range $p := $ingressValues.paths }}
               - path: {{ tpl $p $ }}
-                {{- if $pathType }}
+                {{- if and $pathType $ingressSupportsPathType }}
                 pathType: {{ $pathType }}
                 {{- end }}
                 backend:
