--- a/charts/kubeadm/templates/resources/10-runtimeClass.yaml
+++ b/charts/kubeadm/templates/resources/10-runtimeClass.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.disabledfor120 }}
 apiVersion: node.k8s.io/v1
 kind: RuntimeClass
 metadata:
@@ -6,3 +7,4 @@ handler: runc
 overhead:
   podFixed:
     memory: 16Mi
+{{- end }}
