--- a/charts/kubezero-logging/charts/fluent-bit/Chart.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/Chart.yaml
@@ -1,9 +1,10 @@
 annotations:
   artifacthub.io/changes: |
-    - Upgrade fluent-bit image to v1.7.3
-apiVersion: v2
-appVersion: 1.7.3
-description: Fast and lightweight log processor and forwarder or Linux, OSX and BSD family operating systems.
+    - Upgrade fluent-bit image to v1.7.8
+apiVersion: v1
+appVersion: 1.7.8
+description: Fast and lightweight log processor and forwarder or Linux, OSX and BSD
+  family operating systems.
 home: https://fluentbit.io/
 icon: https://fluentbit.io/assets/img/logo1-default.png
 keywords:
@@ -20,4 +21,4 @@ maintainers:
 name: fluent-bit
 sources:
 - https://github.com/fluent/fluent-bit/
-version: 0.15.4
+version: 0.15.14
