--- a/charts/kubezero-logging/charts/fluentd/templates/configmap-dashboards.yaml
+++ b/charts/kubezero-logging/charts/fluentd/templates/configmap-dashboards.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: dashboard-{{ trimSuffix ".json" (base $path) }}
+  namespace: {{ $.Values.dashboards.namespace | default $.Release.Namespace }}
   labels:
     {{- include "fluentd.labels" $ | nindent 4 }}
     {{- range $key, $val := $.Values.dashboards.labels }}
