--- a/charts/kubezero-logging/charts/fluentd/templates/servicemonitor.yaml
+++ b/charts/kubezero-logging/charts/fluentd/templates/servicemonitor.yaml
@@ -12,6 +12,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
     {{- end }}
 spec:
+  jobLabel: {{ .Values.metrics.serviceMonitor.jobLabel | default .Release.Name }}
   endpoints:
     - port: metrics
       path: /metrics
@@ -21,6 +22,14 @@ spec:
       {{- with .Values.metrics.serviceMonitor.scrapeTimeout }}
       scrapeTimeout: {{ . }}
       {{- end }}
+{{- if .Values.metrics.serviceMonitor.metricRelabelings }}
+      metricRelabelings:
+{{ tpl (toYaml .Values.metrics.serviceMonitor.metricRelabelings | indent 6) . }}
+{{- end }}
+{{- if .Values.metrics.serviceMonitor.relabelings }}
+      relabelings:
+{{ toYaml .Values.metrics.serviceMonitor.relabelings | indent 6 }}
+{{- end }}
   {{- if .Values.metrics.serviceMonitor.namespaceSelector }}
   namespaceSelector:
     {{ toYaml .Values.metrics.serviceMonitor.namespaceSelector | indent 4 -}}
