--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -11,7 +11,7 @@ eck-operator:
     node-role.kubernetes.io/master: ""
 
 # Version for ElasticSearch and Kibana have to match so we define it at top-level
-version: 7.11.1
+version: 7.13.2
 
 elastic_password: "" # super_secret_elastic_password
 
@@ -46,7 +46,7 @@ fluentd:
   enabled: false
   image:
     repository: fluent/fluentd-kubernetes-daemonset
-    tag: v1.12-debian-elasticsearch7-1
+    tag: v1-debian-elasticsearch
   istio:
     enabled: false
 
@@ -192,13 +192,16 @@ fluentd:
           unrecoverable_error_types ["out_of_memory_error"]
           bulk_message_request_threshold 2097152
 
-          <buffer tag>
+          <buffer>
             @type file
-            chunk_limit_size 4MB
-            total_limit_size 2GB
+
             flush_mode interval
             flush_thread_count 1
             flush_interval 30s
+
+            chunk_limit_size 4MB
+            total_limit_size 2GB
+
             flush_at_shutdown true
             retry_type exponential_backoff
             retry_timeout 2h
