--- a/charts/kubezero-aws-ebs-csi-driver/Chart.yaml
+++ b/charts/kubezero-aws-ebs-csi-driver/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: kubezero-aws-ebs-csi-driver
 description: KubeZero Umbrella Chart for aws-ebs-csi-driver
 type: application
-version: 0.5.1
-appVersion: 0.10.0
+version: 0.6.0
+appVersion: 1.2.3
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 sources:
@@ -18,8 +18,8 @@ maintainers:
   - name: Quarky9
 dependencies:
   - name: aws-ebs-csi-driver
-    version: 0.10.0
-    repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
+    version: 1.2.3
+    # repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
   - name: kubezero-lib
     version: ">= 0.1.3"
     repository: https://zero-down-time.github.io/kubezero/
