--- a/charts/kubezero-aws-ebs-csi-driver/charts/aws-ebs-csi-driver/templates/controller.yaml
+++ b/charts/kubezero-aws-ebs-csi-driver/charts/aws-ebs-csi-driver/templates/controller.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- include "aws-ebs-csi-driver.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ default .Values.replicaCount .Values.controller.replicaCount }}
   selector:
     matchLabels:
       app: ebs-csi-controller
@@ -16,40 +16,46 @@ spec:
       labels:
         app: ebs-csi-controller
         {{- include "aws-ebs-csi-driver.labels" . | nindent 8 }}
-      {{- if .Values.podAnnotations }}
-      annotations: {{ toYaml .Values.podAnnotations | nindent 8 }}
+        {{- if .Values.controller.podLabels }}
+        {{- toYaml .Values.controller.podLabels | nindent 8 }}
+        {{- end }}
+      {{- if .Values.controller.podAnnotations }}
+      annotations:
+        {{- toYaml .Values.controller.podAnnotations | nindent 8 }}
+      {{- else if .Values.podAnnotations}}
+      annotations:
+        {{- toYaml .Values.podAnnotations | nindent 8 }}
       {{- end }}
     spec:
       nodeSelector:
         kubernetes.io/os: linux
-        {{- with .Values.nodeSelector }}
-{{ toYaml . | indent 8 }}
+        {{- with default .Values.nodeSelector .Values.controller.nodeSelector }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
       serviceAccountName: {{ .Values.serviceAccount.controller.name }}
-      priorityClassName: {{ .Values.priorityClassName | default "system-cluster-critical" }}
-      {{- with .Values.affinity }}
-      affinity: {{ toYaml . | nindent 8 }}
+      priorityClassName: {{ default .Values.priorityClassName .Values.controller.priorityClassName }}
+      {{- with default .Values.affinity .Values.controller.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       tolerations:
-        {{- if .Values.tolerateAllTaints }}
-        - operator: Exists
-        {{- else }}
         - key: CriticalAddonsOnly
           operator: Exists
         - operator: Exists
           effect: NoExecute
           tolerationSeconds: 300
+        {{- with default .Values.tolerations .Values.controller.tolerations }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
-        {{- with .Values.tolerations }}
-{{ toYaml . | indent 8 }}
-        {{- end }}
-{{- if .Values.topologySpreadConstraints }}
-{{- $tscLabelSelector := dict "labelSelector" ( dict "matchLabels" ( dict "app" "ebs-csi-controller" ) ) }}
+      {{- if or .Values.controller.topologySpreadConstraints .Values.topologySpreadConstraints }}
+      {{- $tscLabelSelector := dict "labelSelector" ( dict "matchLabels" ( dict "app" "ebs-csi-controller" ) ) }}
+      {{- $constraints := list }}
+      {{- range default .Values.topologySpreadConstraints .Values.controller.topologySpreadConstraints }}
+        {{- $constraints = mustAppend $constraints (mergeOverwrite . $tscLabelSelector) }}
+      {{- end }}
       topologySpreadConstraints:
-        {{- range .Values.topologySpreadConstraints }}
-        - {{ mergeOverwrite . $tscLabelSelector | toJson }}
-        {{- end }}
-{{- end }}
+        {{- $constraints | toYaml | nindent 8 }}
+      {{- end }}
       containers:
         - name: ebs-plugin
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
@@ -61,17 +67,24 @@ spec:
             # - {all,controller,node} # specify the driver mode
             {{- end }}
             - --endpoint=$(CSI_ENDPOINT)
-            {{- if .Values.extraVolumeTags }}
+            {{- if or .Values.controller.extraVolumeTags .Values.extraVolumeTags }}
               {{- include "aws-ebs-csi-driver.extra-volume-tags" . | nindent 12 }}
             {{- end }}
-            {{- if .Values.k8sTagClusterId }}
-            - --k8s-tag-cluster-id={{ .Values.k8sTagClusterId }}
+            {{- with default .Values.k8sTagClusterId .Values.controller.k8sTagClusterId }}
+            - --k8s-tag-cluster-id={{ . }}
+            {{- end }}
+            {{- with .Values.controller.httpEndpoint }}
+            - --http-endpoint={{ . }}
             {{- end }}
             - --logtostderr
-            - --v={{ .Values.logLevel }}
+            - --v={{ .Values.controller.logLevel }}
           env:
             - name: CSI_ENDPOINT
               value: unix:///var/lib/csi/sockets/pluginproxy/csi.sock
+            - name: CSI_NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
             - name: AWS_ACCESS_KEY_ID
               valueFrom:
                 secretKeyRef:
@@ -84,9 +97,9 @@ spec:
                   name: aws-secret
                   key: access_key
                   optional: true
-            {{- if .Values.region }}
+            {{- with default .Values.region .Values.controller.region }}
             - name: AWS_REGION
-              value: {{ .Values.region }}
+              value: {{ . }}
             {{- end }}
             {{- if .Values.controller.extraVars }}
             {{- range $key, $val :=  .Values.controller.extraVars }}
@@ -94,17 +107,18 @@ spec:
               value: "{{ $val }}"
             {{- end }}
             {{- end }}
-{{- if .Values.proxy.http_proxy }}
-            - name: HTTP_PROXY
-              value: {{ .Values.proxy.http_proxy | quote }}
-            - name: HTTPS_PROXY
-              value: {{ .Values.proxy.http_proxy | quote }}
-            - name: NO_PROXY
-              value: {{ .Values.proxy.no_proxy | quote }}
-{{- end }}
+            {{- if .Values.proxy.http_proxy }}
+            {{- include "aws-ebs-csi-driver.http-proxy" . | nindent 12 }}
+            {{- end }}
+            {{- with .Values.controller.env.ebsPlugin }}
+            {{- . | toYaml | nindent 12 }}
+            {{- end }}
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
+            - name: aws-token
+              mountPath: "/var/run/secrets/sts.amazonaws.com/serviceaccount/"
+              readOnly: true
           ports:
             - name: healthz
               containerPort: 9808
@@ -125,111 +139,102 @@ spec:
             timeoutSeconds: 3
             periodSeconds: 10
             failureThreshold: 5
-          {{- with .Values.resources }}
-          resources: {{ toYaml . | nindent 12 }}
+          {{- with default .Values.resources (default .Values.controller.resources .Values.controller.containerResources.ebsPlugin) }}
+          resources:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
         - name: csi-provisioner
           image: {{ printf "%s:%s" .Values.sidecars.provisionerImage.repository .Values.sidecars.provisionerImage.tag }}
           args:
             - --csi-address=$(ADDRESS)
-            - --v={{ .Values.logLevel }}
-            {{- if .Values.enableVolumeScheduling }}
+            - --v={{ .Values.controller.logLevel }}
             - --feature-gates=Topology=true
-            {{- end}}
-            {{- if .Values.extraCreateMetadata }}
+            {{- if or .Values.controller.extraCreateMetadata .Values.extraCreateMetadata }}
             - --extra-create-metadata
             {{- end}}
-            - --leader-election={{ ternary "true" "false" ( gt (.Values.replicaCount|int) 1 ) }}
+            - --leader-election=true
             - --default-fstype=ext4
           env:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
-{{- if .Values.proxy.http_proxy }}
-            - name: HTTP_PROXY
-              value: {{ .Values.proxy.http_proxy | quote }}
-            - name: HTTPS_PROXY
-              value: {{ .Values.proxy.http_proxy | quote }}
-            - name: NO_PROXY
-              value: {{ .Values.proxy.no_proxy | quote }}
-{{- end }}
+            {{- if .Values.proxy.http_proxy }}
+            {{- include "aws-ebs-csi-driver.http-proxy" . | nindent 12 }}
+            {{- end }}
+            {{- with .Values.controller.env.provisioner }}
+            {{- . | toYaml | nindent 12 }}
+            {{- end }}
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
-          {{- with .Values.resources }}
-          resources: {{ toYaml . | nindent 12 }}
+          {{- with default .Values.resources (default .Values.controller.resources .Values.controller.containerResources.provisioner) }}
+          resources:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
         - name: csi-attacher
           image: {{ printf "%s:%s" .Values.sidecars.attacherImage.repository .Values.sidecars.attacherImage.tag }}
           args:
             - --csi-address=$(ADDRESS)
-            - --v={{ .Values.logLevel }}
-            - --leader-election={{ ternary "true" "false" ( gt (.Values.replicaCount|int) 1 ) }}
+            - --v={{ .Values.controller.logLevel }}
+            - --leader-election=true
           env:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
-{{- if .Values.proxy.http_proxy }}
-            - name: HTTP_PROXY
-              value: {{ .Values.proxy.http_proxy | quote }}
-            - name: HTTPS_PROXY
-              value: {{ .Values.proxy.http_proxy | quote }}
-            - name: NO_PROXY
-              value: {{ .Values.proxy.no_proxy | quote }}
-{{- end }}
+            {{- if .Values.proxy.http_proxy }}
+            {{- include "aws-ebs-csi-driver.http-proxy" . | nindent 12 }}
+            {{- end }}
+            {{- with .Values.controller.env.attacher }}
+            {{- . | toYaml | nindent 12 }}
+            {{- end }}
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
-          {{- with .Values.resources }}
-          resources: {{ toYaml . | nindent 12 }}
+          {{- with default .Values.resources (default .Values.controller.resources .Values.controller.containerResources.attacher) }}
+          resources:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
-        {{- if .Values.enableVolumeSnapshot }}
         - name: csi-snapshotter
           image: {{ printf "%s:%s" .Values.sidecars.snapshotterImage.repository .Values.sidecars.snapshotterImage.tag }}
           args:
             - --csi-address=$(ADDRESS)
-            - --leader-election={{ ternary "true" "false" ( gt (.Values.replicaCount|int) 1 ) }}
+            - --leader-election=true
           env:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
-{{- if .Values.proxy.http_proxy }}
-            - name: HTTP_PROXY
-              value: {{ .Values.proxy.http_proxy | quote }}
-            - name: HTTPS_PROXY
-              value: {{ .Values.proxy.http_proxy | quote }}
-            - name: NO_PROXY
-              value: {{ .Values.proxy.no_proxy | quote }}
-{{- end }}
+            {{- if .Values.proxy.http_proxy }}
+            {{- include "aws-ebs-csi-driver.http-proxy" . | nindent 12 }}
+            {{- end }}
+            {{- with .Values.controller.env.snapshotter }}
+            {{- . | toYaml | nindent 12 }}
+            {{- end }}
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
-          {{- with .Values.resources }}
-          resources: {{ toYaml . | nindent 12 }}
+          {{- with default .Values.resources (default .Values.controller.resources .Values.controller.containerResources.snapshotter) }}
+          resources:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
-        {{- end }}
-        {{- if .Values.enableVolumeResizing }}
         - name: csi-resizer
           image: {{ printf "%s:%s" .Values.sidecars.resizerImage.repository .Values.sidecars.resizerImage.tag }}
           imagePullPolicy: Always
           args:
             - --csi-address=$(ADDRESS)
-            - --v={{ .Values.logLevel }}
+            - --v={{ .Values.controller.logLevel }}
           env:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
-{{- if .Values.proxy.http_proxy }}
-            - name: HTTP_PROXY
-              value: {{ .Values.proxy.http_proxy | quote }}
-            - name: HTTPS_PROXY
-              value: {{ .Values.proxy.http_proxy | quote }}
-            - name: NO_PROXY
-              value: {{ .Values.proxy.no_proxy | quote }}
-{{- end }}
+            {{- if .Values.proxy.http_proxy }}
+            {{- include "aws-ebs-csi-driver.http-proxy" . | nindent 12 }}
+            {{- end }}
+            {{- with .Values.controller.env.resizer }}
+            {{- . | toYaml | nindent 12 }}
+            {{- end }}
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
-          {{- with .Values.resources }}
-          resources: {{ toYaml . | nindent 12 }}
+          {{- with default .Values.resources (default .Values.controller.resources .Values.controller.containerResources.resizer) }}
+          resources:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
-        {{- end }}
         - name: liveness-probe
           image: {{ printf "%s:%s" .Values.sidecars.livenessProbeImage.repository .Values.sidecars.livenessProbeImage.tag }}
           args:
@@ -237,8 +242,9 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /csi
-          {{- with .Values.resources }}
-          resources: {{ toYaml . | nindent 12 }}
+          {{- with default .Values.resources (default .Values.controller.resources .Values.controller.containerResources.liveness) }}
+          resources:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -249,3 +255,10 @@ spec:
       volumes:
         - name: socket-dir
           emptyDir: {}
+        - name: aws-token
+          projected:
+            sources:
+            - serviceAccountToken:
+                path: token
+                expirationSeconds: 86400
+                audience: "sts.amazonaws.com"
