--- a/charts/kubezero-aws-ebs-csi-driver/charts/aws-ebs-csi-driver/values.yaml
+++ b/charts/kubezero-aws-ebs-csi-driver/charts/aws-ebs-csi-driver/values.yaml
@@ -2,22 +2,18 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
-
 image:
   repository: k8s.gcr.io/provider-aws/aws-ebs-csi-driver
-  tag: "v0.10.0"
+  tag: "v1.1.0"
   pullPolicy: IfNotPresent
-
-logLevel: 5
 
 sidecars:
   provisionerImage:
     repository: k8s.gcr.io/sig-storage/csi-provisioner
-    tag: "v2.0.2"
+    tag: "v2.1.1"
   attacherImage:
     repository: k8s.gcr.io/sig-storage/csi-attacher
-    tag: "v3.0.0"
+    tag: "v3.1.0"
   snapshotterImage:
     repository: k8s.gcr.io/sig-storage/csi-snapshotter
     tag: "v3.0.3"
@@ -29,97 +25,128 @@ sidecars:
     tag: "v1.0.0"
   nodeDriverRegistrarImage:
     repository: k8s.gcr.io/sig-storage/csi-node-driver-registrar
-    tag: "v2.0.1"
+    tag: "v2.1.0"
 
 snapshotController:
   repository: k8s.gcr.io/sig-storage/snapshot-controller
   tag: "v3.0.3"
+  podAnnotations: {}
+  podLabels: {}
 
-proxy: {}
-#  http_proxy:
-#  no_proxy:
+proxy:
+  http_proxy:
+  no_proxy:
 
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-podAnnotations: {}
-
-# True if enable volume scheduling for dynamic volume provisioning
-enableVolumeScheduling: true
-
-# True if enable volume resizing
-enableVolumeResizing: false
+nameOverride:
+fullnameOverride:
 
 # True if enable volume snapshot
 enableVolumeSnapshot: false
 
-# The "maximum number of attachable volumes" per node
-volumeAttachLimit: ""
+# Moving to values under controller
+affinity: {}
+extraCreateMetadata: true
+extraVolumeTags: {}
+k8sTagClusterId:
+nodeSelector: {}
+podAnnotations: {}
+priorityClassName: "system-cluster-critical"
+region:
+replicaCount: 2
+resources: {}
+tolerations: []
+topologySpreadConstraints: []
 
-resources:
-  {}
+controller:
+  affinity: {}
+  # True if enable volume scheduling for dynamic volume provisioning
+  env:
+    ebsPlugin: []
+    provisioner: []
+    attacher: []
+    snapshotter: []
+    resizer: []
+  # If set, add pv/pvc metadata to plugin create requests as parameters.
+  extraCreateMetadata: true
+  # Will be removed in later version in favor of env.ebsPlugin
+  extraVars: {}
+  # Extra volume tags to attach to each dynamically provisioned volume.
+  # ---
+  # extraVolumeTags:
+  #   key1: value1
+  #   key2: value2
+  extraVolumeTags: {}
+  httpEndpoint:
+  # ID of the Kubernetes cluster used for tagging provisioned EBS volumes (optional).
+  k8sTagClusterId:
+  logLevel: 2
+  nodeSelector: {}
+  podAnnotations: {}
+  podLabels: {}
+  priorityClassName:
+  # AWS region to use. If not specified then the region will be looked up via the AWS EC2 metadata
+  # service.
+  # ---
+  # region: us-east-1
+  region:
+  replicaCount:
+  resources: {}
+  containerResources:
+    ebsPlugin: {}
+    provisioner: {}
+    attacher: {}
+    snapshotter: {}
+    resizer: {}
+    liveness: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+  # Note that you will need to set resource requests if you want the cluster autoscaler to
+  # scale your nodes when you increase/decrease the number of ebs-csi-controller replicas.
   # limits:
   #   cpu: 100m
   #   memory: 128Mi
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
+  tolerations: []
+  # TSCs without the label selector stanza
+  #
+  # Example:
+  #
+  # topologySpreadConstraints:
+  #  - maxSkew: 1
+  #    topologyKey: topology.kubernetes.io/zone
+  #    whenUnsatisfiable: ScheduleAnyway
+  #  - maxSkew: 1
+  #    topologyKey: kubernetes.io/hostname
+  #    whenUnsatisfiable: ScheduleAnyway
+  topologySpreadConstraints: []
 
-priorityClassName: ""
-nodeSelector: {}
-tolerateAllTaints: false
-tolerations: []
-affinity: {}
-
-# TSCs without the label selector stanza
-#
-# Example:
-#
-# topologySpreadConstraints:
-#  - maxSkew: 1
-#    topologyKey: topology.kubernetes.io/zone
-#    whenUnsatisfiable: ScheduleAnyway
-#  - maxSkew: 1
-#    topologyKey: kubernetes.io/hostname
-#    whenUnsatisfiable: ScheduleAnyway
-
-topologySpreadConstraints: []
-
-# Extra volume tags to attach to each dynamically provisioned volume.
-# ---
-# extraVolumeTags:
-#   key1: value1
-#   key2: value2
-extraVolumeTags: {}
-
-# If set, add pv/pvc metadata to plugin create requests as parameters.
-extraCreateMetadata: false
-
-# ID of the Kubernetes cluster used for tagging provisioned EBS volumes (optional).
-k8sTagClusterId: ""
-
-# AWS region to use. If not specified then the region will be looked up via the AWS EC2 metadata
-# service.
-# ---
-# region: us-east-1
-region: ""
-
-# Additonal environment variables for the controller
-controller:
-  extraVars: {}
+# Moving to values under node
+# The "maximum number of attachable volumes" per node
+volumeAttachLimit:
 
 node:
-  priorityClassName: ""
+  env:
+    ebsPlugin: []
+    nodeDriverRegistrar: []
+  kubeletPath: /var/lib/kubelet
+  logLevel: 2
+  priorityClassName:
   nodeSelector: {}
   podAnnotations: {}
+  podLabels: {}
   tolerateAllTaints: false
   tolerations: []
   resources: {}
+  containerResources:
+    ebsPlugin: {}
+    nodeDriverRegistrar: {}
+    liveness: {}
+  volumeAttachLimit:
 
 serviceAccount:
   controller:
