--- a/charts/kubezero-aws-efs-csi-driver/charts/aws-efs-csi-driver/templates/storageclass.yaml
+++ b/charts/kubezero-aws-efs-csi-driver/charts/aws-efs-csi-driver/templates/storageclass.yaml
@@ -3,13 +3,24 @@ kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
   name: {{ .name }}
+  {{- with .annotations }}
+  annotations:
+  {{ toYaml . | indent 4 }}
+  {{- end }}
 provisioner: efs.csi.aws.com
 {{- with .mountOptions }}
-mountOptions: 
+mountOptions:
 {{ toYaml . }}
 {{- end }}
 {{- with .parameters }}
 parameters:
 {{ toYaml . | indent 2 }}
 {{- end }}
+{{- with .reclaimPolicy }}
+reclaimPolicy: {{ . }}
+{{- end }}
+{{- with .volumeBindingMode }}
+volumeBindingMode: {{ . }}
+{{- end }}
+---
 {{- end }}
