--- a/charts/kubezero-aws-efs-csi-driver/values.yaml
+++ b/charts/kubezero-aws-efs-csi-driver/values.yaml
@@ -1,24 +1,44 @@
 aws-efs-csi-driver:
-  logLevel: 1
+  replicaCount: 1
 
-  resources:
-    requests:
-      cpu: 20m
-      memory: 64Mi
-    limits:
-      memory: 128Mi
+  controller:
+    create: true
+    logLevel: 1
 
-  affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: node.kubernetes.io/csi.efs.fs
-            operator: Exists
+    tolerations:
+    - key: node-role.kubernetes.io/master
+      effect: NoSchedule
+    nodeSelector:
+      node-role.kubernetes.io/master: ""
 
-StorageClass:
-  create: true
-  default: false
+    #extraEnv:
+    #- name: AWS_ROLE_ARN
+    #  value: "<aws-efs-csi-driver IAM ROLE ARN>"
+    #- name: AWS_WEB_IDENTITY_TOKEN_FILE
+    #  value: "/var/run/secrets/sts.amazonaws.com/serviceaccount/token"
+    #- name: AWS_STS_REGIONAL_ENDPOINTS
+    #  value: regional
+
+  node:
+    logLevel: 1
+
+    resources:
+      requests:
+        cpu: 20m
+        memory: 64Mi
+      limits:
+        memory: 128Mi
+
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+          - matchExpressions:
+            - key: node.kubernetes.io/csi.efs.fs
+              operator: Exists
+
+  storageClasses:
+  - name: efs-sc
 
 #PersistentVolumes:
 #  - name: example-pv
